refactor: checkpoint session rules and domain responsibilities